# bpcon

./: .prettierignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/: CONTRIBUTING.md
.github/workflows/: check-pr-title.yml  docs.yml  lint-format.yml  release-dry.yml  release.yml  rust.yml
src/: config.rs  error.rs  leader.rs  lib.rs  message.rs  party.rs  test_mocks.rs  value.rs
src/message/: msg1a.rs  msg1b.rs  msg1c.rs  msg2a.rs  msg2av.rs  msg2b.rs
tests/: mod.rs
