[package]
name = "bpcon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"
rkyv = { version = "0.7.44", features = ["validation"]}
serde = { version = "1.0.207", features = ["derive"] }
bincode = "1.3.3"
tokio = { version = "1.39.2", features = ["full", "test-util"] }
rand = "0.9.0-alpha.2"
seeded-random = "0.6.0"
thiserror = "1.0.63"