[package]
name = "bpcon"
version = "0.1.0"
edition = "2021"
description = "BPCon: A Byzantine Fault-Tolerant Consensus Protocol Implementation in Rust."
license = "MIT"
repository = "https://github.com/distributed-lab/bpcon"
homepage = "https://github.com/distributed-lab/bpcon#readme"
documentation = "https://distributed-lab.github.io/bpcon/"
keywords = ["consensus", "byzantine", "protocol", "distributed-systems", "blockchain"]
categories = ["algorithms"]
authors = ["Distributed Lab"]
readme = "README.md"

[dependencies]
log = "^0.4.22"
serde = { version = "^1.0.207", features = ["derive"] }
bincode = "^1.3.3"
rkyv = { version = "^0.7.44", features = ["validation"] }
tokio = { version = "^1.39.2", features = ["full"] }
rand = "^0.9.0-alpha.2"
seeded-random = "^0.6.0"
thiserror = "^1.0.63"

[features]
default = ["tokio/full", "rkyv/validation"]
test-mocks = []

[dev-dependencies]
tokio = { version = "^1.39.2", features = ["test-util"] }
futures = "0.3.30"